# ccxt-rust

./: .clippy.toml  .env.example  .gitignore  Cargo.toml  README.md  README_CN.md  rustfmt.toml  test_u64_since.rs
ccxt-core/: Cargo.toml
ccxt-core/benches/: timestamp_benchmark.rs
ccxt-core/src/: auth.rs  base_exchange.rs  capability.rs  circuit_breaker.rs  config.rs  credentials.rs  error.rs  exchange.rs  http_client.rs  lib.rs  logging.rs  parser_utils.rs  precision.rs  rate_limiter.rs  retry_strategy.rs  signed_request.rs  test_config.rs  time.rs  ws_client.rs  ws_exchange.rs
ccxt-core/src/base_exchange/: config.rs  market_cache.rs  mod.rs  requests.rs
ccxt-core/src/capability/: exchange_caps.rs  flags.rs  macros.rs  mod.rs
ccxt-core/src/error/: config.rs  context.rs  convert.rs  details.rs  mod.rs  network.rs  order.rs  parse.rs  tests.rs
ccxt-core/src/http_client/: builder.rs  config.rs  headers.rs  mod.rs  request.rs  response.rs  retry.rs  tests.rs
ccxt-core/src/symbol/: error.rs  formatter.rs  mod.rs  parser.rs
ccxt-core/src/traits/: account.rs  funding.rs  margin.rs  market_data.rs  mod.rs  public_exchange.rs  trading.rs
ccxt-core/src/types/: account.rs  balance.rs  bid_ask.rs  currency.rs  default_type.rs  endpoint.rs  fee.rs  financial.rs  funding_rate.rs  ledger.rs  margin.rs  mark_price.rs  market.rs  market_data.rs  mod.rs  ohlcv.rs  ohlcv_request.rs  order.rs  order_request.rs  orderbook.rs  params.rs  position.rs  risk.rs  symbol.rs  ticker.rs  ticker_params.rs  trade.rs  transaction.rs  transfer.rs
ccxt-core/src/ws_client/: config.rs  error.rs  event.rs  message.rs  mod.rs  reconnect.rs  state.rs  subscription.rs
ccxt-core/tests/: error_property_tests.rs  financial_property_tests.rs  logging_test.rs  market_symbol_integration_test.rs  symbol_property_tests.rs  thread_safety_property_test.rs  timestamp_security_test.rs  trait_object_safety_test.rs  ws_property_tests.rs  ws_reconnect_test.rs
ccxt-exchanges/: Cargo.toml
ccxt-exchanges/benches/: binance_benchmark.rs  bybit_benchmark.rs  hyperliquid_benchmark.rs  okx_benchmark.rs
ccxt-exchanges/src/: exchange.rs  lib.rs
ccxt-exchanges/src/binance/: auth.rs  builder.rs  constants.rs  endpoint_router.rs  error.rs  exchange_impl.rs  mod.rs  options.rs  parser.rs  rate_limiter.rs  rest.rs  signed_request.rs  signing_strategy.rs  symbol.rs  time_sync.rs  urls.rs  ws.rs  ws_exchange_impl.rs
ccxt-exchanges/src/binance/parser/: balance.rs  funding.rs  margin.rs  market.rs  misc.rs  mod.rs  ohlcv.rs  order.rs  orderbook.rs  position.rs  ticker.rs  trade.rs  transaction.rs
ccxt-exchanges/src/binance/rest/: account.rs  delivery.rs  funding.rs  futures.rs  margin.rs  market_data.rs  mod.rs  spot.rs
ccxt-exchanges/src/binance/rest/futures/: funding.rs  leverage.rs  margin.rs  mod.rs  positions.rs
ccxt-exchanges/src/binance/traits/: mod.rs
ccxt-exchanges/src/binance/ws/: binance_impl.rs  cache.rs  connection_manager.rs  handlers.rs  health.rs  listen_key.rs  mod.rs  parsers.rs  shutdown.rs  streams.rs  subscriptions.rs  types.rs  user_data.rs
ccxt-exchanges/src/bitget/: auth.rs  builder.rs  endpoint_router.rs  error.rs  exchange_impl.rs  margin_impl.rs  mod.rs  parser.rs  rest.rs  signed_request.rs  symbol.rs  ws.rs  ws_exchange_impl.rs
ccxt-exchanges/src/bitget/rest/: account.rs  market_data.rs  mod.rs  trading.rs
ccxt-exchanges/src/bitget/rest/futures/: funding.rs  leverage.rs  margin.rs  mod.rs  positions.rs
ccxt-exchanges/src/bybit/: auth.rs  builder.rs  endpoint_router.rs  error.rs  mod.rs  parser.rs  rest.rs  signed_request.rs  symbol.rs  ws.rs  ws_exchange_impl.rs
ccxt-exchanges/src/hyperliquid/: auth.rs  builder.rs  endpoint_router.rs  error.rs  exchange_impl.rs  mod.rs  parser.rs  rest.rs  signed_request.rs  ws.rs  ws_exchange_impl.rs
ccxt-exchanges/src/okx/: auth.rs  builder.rs  endpoint_router.rs  error.rs  exchange_impl.rs  margin_impl.rs  mod.rs  parser.rs  rest.rs  signed_request.rs  symbol.rs  ws.rs  ws_exchange_impl.rs
ccxt-exchanges/src/okx/rest/: account.rs  market_data.rs  mod.rs  trading.rs
ccxt-exchanges/src/okx/rest/futures/: funding.rs  leverage.rs  margin.rs  mod.rs  positions.rs
ccxt-exchanges/tests/: binance_account_test.rs  binance_advanced_market_data_test.rs  binance_advanced_test.rs  binance_backward_compatibility_property_test.rs  binance_capability_trait_consistency_property_test.rs  binance_conditional_orders_test.rs  binance_futures_margin_test.rs  binance_futures_position_mode_test.rs  binance_integration_test.rs  binance_margin_test.rs  binance_market_data_test.rs  binance_my_trades_test.rs  binance_order_management_test.rs  binance_orderbook_test.rs  binance_time_sync_integration_test.rs  binance_watch_orders_test.rs  binance_ws_subscribe_payload_test.rs  binance_ws_test.rs  bitget_integration_test.rs  bitget_property_test.rs  bybit_integration_test.rs  exchange_trait_integration_test.rs  hyperliquid_integration_test.rs  hyperliquid_property_test.rs  hyperliquid_ws_test.rs  logging_integration_test.rs  okx_bybit_shared_property_test.rs  okx_integration_test.rs  orderbook_resync_test.rs  sandbox_testnet_property_test.rs  stress_test.rs  symbol_converter_property_test.rs  time_sync_property_tests.rs
examples/: basic_usage.rs  binance_account_example.rs  binance_advanced_features.rs  binance_advanced_market_data_example.rs  binance_conditional_orders_example.rs  binance_deposit_withdrawal_example.rs  binance_example.rs  binance_fee_example.rs  binance_futures_example.rs  binance_futures_margin_example.rs  binance_futures_transfer_example.rs  binance_ledger_example.rs  binance_margin_borrow_example.rs  binance_margin_example.rs  binance_market_data_example.rs  binance_my_trades_example.rs  binance_oco_order_example.rs  binance_order_enhancement_example.rs  binance_order_management_example.rs  binance_orderbook_example.rs  binance_position_mode_example.rs  binance_transfer_example.rs  binance_watch_orders_example.rs  binance_websocket_reconnect_example.rs  binance_ws_example.rs  bybit_example.rs  hyperliquid_example.rs  logging_example.rs  (+6 more)
(+36 files in other folders)
