[package]
name = "ccxt-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["CCXT Team"]
license = "MIT"
description = "Cryptocurrency exchange trading library in Rust"
repository = "https://github.com/Praying/ccxt-rust"
keywords = ["cryptocurrency", "exchange", "trading", "api", "bitcoin"]
categories = ["api-bindings", "finance"]

[workspace]
members = [
    ".",
    "ccxt-core",
    "ccxt-exchanges",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# HTTP & WebSocket
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["rustls-tls-native-roots", "connect"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Decimal precision
rust_decimal = "1.39"
rust_decimal_macros = "1.39"

# Cryptography
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
sha3 = "0.10"
md-5 = "0.10"
hex = "0.4"
base64 = "0.22"
# rsa = "0.9.6"
ed25519-dalek = "2.1"
rand = "0.9"
k256 = { version = "0.13", features = ["ecdsa"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections & Concurrency
dashmap = "6.1"
indexmap = { version = "2.1", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"

# Utility
url = "2.5"
urlencoding = "2.1"
regex = "1.10"
lazy_static = "1.4"

# Configuration
config = "0.15"

# Rate limiting
governor = "0.10"
nonzero_ext = "0.3"

# Development dependencies
tokio-test = "0.4"
criterion = { version = "0.8", features = ["async_tokio"] }
wiremock = "0.6"
proptest = "1.4"
mockito = "1.2"
paste = "1.0"
dotenvy = "0.15"
envy = "0.4"

[dependencies]
# Workspace members
ccxt-core = { path = "ccxt-core" }
ccxt-exchanges = { path = "ccxt-exchanges" }

# Async runtime
tokio = { workspace = true }

# Error handling (for examples)
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Decimal precision
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

# Time handling
chrono = { workspace = true }

# Collections
dashmap = { workspace = true }
indexmap = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Rate limiting
governor = { workspace = true }
nonzero_ext = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }

# Utility
once_cell = { workspace = true }
parking_lot = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
mockito = { workspace = true }
proptest = { workspace = true }
wiremock = { workspace = true }
paste = { workspace = true }

[features]
default = ["rest", "websocket", "rustls-tls"]

# TLS implementations (mutually exclusive)
rustls-tls = ["ccxt-core/rustls-tls", "ccxt-exchanges/rustls-tls"]
native-tls = ["ccxt-core/native-tls", "ccxt-exchanges/native-tls"]

# Protocol support
rest = []
websocket = ["ccxt-core/websocket", "ccxt-exchanges/websocket"]

# Optional features
compression = ["ccxt-core/compression"]
test-utils = ["ccxt-core/test-utils"]

# Complete feature set
full = ["rest", "websocket", "compression"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

# [[bench]]
# name = "orderbook"
# harness = false

# [[bench]]
# name = "parsing"
# harness = false